# Langevin-dynamics

./: LICENSE  README.md  requirements.txt  setup.cfg  setup.py
examples/: banana_LD.py  banana_MALA.py  gaussian_LD.py  gaussian_MALA.py
langevin_sampling/: SGLD.py  precondSGLD.py  samplers.py
src/: SGLD.py  banana_LD.py  banana_MALA.py  gaussian_LD.py  gaussian_MALA.py  langevin_dynamics.py  metropolis_langevin.py
src/langevin_sampling/: SGLD.py  samplers.py
