[metadata]
name = langevin_sampling
version = 1.3
author = Ali Siahkoohi
author_email = ali.siahkoohi@gmail.com
description = Sampling with gradient-based Markov Chain Monte Carlo approaches
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alisiahkoohi/Langevin-dynamics
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
install_requires =
    torch
    matplotlib
    numpy
    tqdm
    rosenbrock
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src